[package]
name = "finding"
version = "0.2.0"
authors = ["Hatter Jiang <jht5945@gmail.com>"]
edition = "2018"
description = "command line finding tool"
readme = "README.md"
repository = "https://github.com/jht5945/finding"
license = "MIT"

[dependencies]
argparse = "0.2.2"
term = "0.5.2"
term_size = "0.3.1"
rust_util = "0.2.2"
